--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,6 @@ GMetrics Change Log
 -------------------------------------------------------------------------------
 http://www.gmetrics.org
 
-Changes in version 0.0 (?? Dec 2009)
+Changes in version 0.0 (16 Dec 2009)
 ------------------------------------
 Initial release. Includes AbcMetric, ClassLineCountMetric, MethodLineCountMetric.
