Remove FunctionNames.groovy placeholder file. Was necessary to do the mvn release:perform
git-svn-id: http://svn.code.sf.net/p/gmetrics/code/trunk@250 316bb773-894d-4c1b-afab-fbf10aed1fe6

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,6 +2,12 @@ GMetrics Change Log
 -------------------------------------------------------------------------------
 http://www.gmetrics.org
 
+Changes in version 0.6 (??? 2012)
+--------------------------------------
+FIXES AND ENHANCEMENTS
+- #3508192: Make CoberturaCoverageFile threadsafe.
+
+
 Changes in version 0.5 (Jan 2012)
 --------------------------------------
 NEW METRICS
