Fix CyclomaticComplexity metric does not count null-check operator if it is applied to a method call.
git-svn-id: http://svn.code.sf.net/p/gmetrics/code/trunk@259 316bb773-894d-4c1b-afab-fbf10aed1fe6

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ NEW METRICS
 
 FIXES AND ENHANCEMENTS
 - #3508192: Make CoberturaCoverageFile threadsafe.
+- #3520789: Fix CyclomaticComplexity metric does not count null-check operator if it is applied to a method call.
 
 
 Changes in version 0.5 (Jan 2012)
