Add fileName and filePath to <Class> elements for FilesystemSourceAnalyzer
git-svn-id: http://svn.code.sf.net/p/gmetrics/code/trunk@283 316bb773-894d-4c1b-afab-fbf10aed1fe6

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -17,6 +17,9 @@ FIXES AND ENHANCEMENTS
 - #3523820: Reports: Support for metric values that are lists or maps.
 - #3523828: BasicHtmlReportWriter: Display ‘N/A’ if the metric value is null.
 
+THANKS
+- Thanks to Akila Perera for the patch for #3560963.
+
 
 Changes in version 0.5 (Jan 2012)
 --------------------------------------
